
[tool.poetry]
name = "corebases"
version = "0.1.1"
description = "Full power of *asyncpg* with user friendly api of *sqlalchemy.core*"
authors = ["Evgeny Zuev <zueves@gmail.com>"]
license = "BSD"
homepage = "https://github.com/zueve/corebases"
repository = "https://github.com/zueve/corebases"
documentation = "https://github.com/zueve/corebases"

[tool.poetry.dependencies]
python = "^3.7"
asyncpg = "^0.25"
SQLAlchemy = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
isort = "^5.10"
mypy = "^0.942"
flake8 = "^4.0"
pyclean = "^2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
